// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`přepiš existující stopky 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`přepiš existující stopky 2`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`přepiš existující stopky 3`] = `
Array [
  Object {
    "__v": 0,
    "base": 2018-06-09T09:10:00.400Z,
    "delta": "P0D",
    "running": true,
    "typ": "půlmaraton",
  },
]
`;

exports[`saveStopky [not authenticated] 1`] = `
Object {
  "code": "authentication token invalid",
  "status": "Špatný ověřovací token. Zkus se přihlásit znovu. Detaily: JsonWebTokenError: jwt must be provided",
}
`;

exports[`vytvoř stopky 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`vytvoř stopky 2`] = `
Array [
  Object {
    "__v": 0,
    "base": null,
    "delta": "PT0H0M12.5S",
    "running": false,
    "typ": "půlmaraton",
  },
]
`;
